created bar chart panel by SES

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(make_discrete_map)
 export(make_map)
 export(make_map_panel)
 export(plot_bar_periods)
+export(plot_bar_periods_ses_grid)
 export(plot_lollipop)
 export(ses_period_map_panel)
 export(stacked_bar)
