--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(make_map)
 export(make_map_panel)
 export(plot_bar_periods)
 export(plot_bar_periods_ses_grid)
+export(plot_bar_race)
 export(plot_bar_ses)
 export(plot_lollipop)
 export(ses_period_map_panel)
