created new function: stacked bar filled by race

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ export(plot_bar_periods_ses_grid)
 export(plot_bar_race)
 export(plot_bar_ses)
 export(plot_lollipop)
+export(race_stacked_bar)
 export(ses_period_map_panel)
 export(stacked_bar)
